Fixed nav bar spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ nav button:focus {
 	display: flex;
 	justify-content: space-between;
 	width: 350px;
-	max-width: 75%;
+	width: 33.3%;
 }
 
 header {
